<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_home"
        android:title="@string/menu_home"
        android:icon="@drawable/home_48px"/>

    <item
        android:id="@+id/bottom_create_plan"
        android:title="@string/menu_create_plan"
        android:icon="@drawable/exercise_48px"/>

    <item
        android:id="@+id/nav_gym_map"
        android:icon="@drawable/public_48px"
        android:title="@string/menu_gym_map" />

    <item
        android:id="@+id/bottom_progress"
        android:title="@string/menu_progress"
        android:icon="@drawable/analytics_48px"/>

    <item
        android:id="@+id/bottom_account"
        android:title="@string/menu_account"
        android:icon="@drawable/account"/>
</menu>